Actually make contexts work...

--- a/test/index.html
+++ b/test/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="lib/jasmine.css">
 	<script type="text/javascript" src="lib/jasmine.js"></script>
 	<script type="text/javascript" src="lib/jasmine-html.js"></script>
-	<script src="http://ajax.microsoft.com/ajax/jquery/jquery-1.4.4.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
 	<script type="text/javascript" src="lib/jasmine-jquery.js"></script>
 
 	<!-- include source files here... -->
