Fix dial controls example description

--- a/examples/dial-controls/index.html
+++ b/examples/dial-controls/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<title>Dial Controls with jQuery Waypoints</title>
-	<meta name="description" content="An example of context aware sticky navigation and back to top links using the jQuery Waypoints plugin">
+	<meta name="description" content="An example of dial controls using the jQuery Waypoints plugin">
 	<meta name="viewport" content="width=480">
 	<link rel="stylesheet" href="style.css" type="text/css" media="all">
 	<script src="../modernizr.custom.js"></script>
