--- a/index.html
+++ b/index.html
@@ -193,6 +193,11 @@
 						<dd class="default">default: true</dd>
 						<dd>If true, and multiple waypoints are triggered in one scroll, this waypoint will trigger even if it is not the last waypoint reached.  If false, it will only trigger if it is the last waypoint.</dd>
 						
+						<dt>handler</dt>
+						<dd class="typeof">function</dd>
+						<dd class="default">default: undefined</dd>
+						<dd>An alternative way to bind functions to the waypoint without using the first argument of the waypoint function.</dd>
+						
 						<dt>offset</dt>
 						<dd class="typeof">number | string | function</dd>
 						<dd class="default">default: 0</dd>
