--- a/test/index.html
+++ b/test/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="lib/jasmine.css">
 	<script type="text/javascript" src="lib/jasmine.js"></script>
 	<script type="text/javascript" src="lib/jasmine-html.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
 	<script type="text/javascript" src="lib/jasmine-jquery.js"></script>
 
 	<!-- include source files here... -->
@@ -14,12 +14,37 @@
 
 	<!-- include spec files here... -->
 	<script type="text/javascript" src="spec.js"></script>
+
+	<script type="text/javascript">
+    (function() {
+      var jasmineEnv = jasmine.getEnv();
+      jasmineEnv.updateInterval = 1000;
+
+      var htmlReporter = new jasmine.HtmlReporter();
+
+      jasmineEnv.addReporter(htmlReporter);
+
+      jasmineEnv.specFilter = function(spec) {
+        return htmlReporter.specFilter(spec);
+      };
+
+      var currentWindowOnload = window.onload;
+
+      window.onload = function() {
+        if (currentWindowOnload) {
+          currentWindowOnload();
+        }
+        execJasmine();
+      };
+
+      function execJasmine() {
+        jasmineEnv.execute();
+      }
+
+    })();
+  </script>
 </head>
 
 <body>
-<script type="text/javascript">
-	jasmine.getEnv().addReporter(new jasmine.TrivialReporter());
-	jasmine.getEnv().execute();
-</script>
 </body>
 </html>
