--- a/test/index.html
+++ b/test/index.html
@@ -8,12 +8,10 @@
 	<script type="text/javascript" src="lib/jasmine-html.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
 	<script type="text/javascript" src="lib/jasmine-jquery.js"></script>
+  <script type="text/javascript" src="lib/coffee-script.js"></script>
 
 	<!-- include source files here... -->
 	<script type="text/javascript" src="../waypoints.js"></script>
-
-	<!-- include spec files here... -->
-	<script type="text/javascript" src="spec.js"></script>
 
 	<script type="text/javascript">
     (function() {
@@ -34,7 +32,9 @@
         if (currentWindowOnload) {
           currentWindowOnload();
         }
-        execJasmine();
+        CoffeeScript.load('spec.coffee', function() {
+          execJasmine();
+        });
       };
 
       function execJasmine() {
