--- a/test/fixtures/standard.html
+++ b/test/fixtures/standard.html
@@ -36,26 +36,32 @@ body {
 
 #pretop {
 	top:-100px;
+	left:-100px
 }
 
 #top {
 	top:0;
+	left:0;
 }
 
 .sameposition {
 	top:1000px;
+	left:1000px
 }
 
 #near1 {
 	top:1999px;
+	left:1999px
 }
 
 #near2 {
 	top:2000px;
+	left:2000px
 }
 
 #bottom {
 	top:2950px;
+	left:2950px;
 	overflow:hidden;
 }
 
@@ -68,5 +74,6 @@ body {
 
 #postbottom {
 	top:3100px;
+	left:3100px;
 }
 </style>
