--- a/test/index.html
+++ b/test/index.html
@@ -4,14 +4,15 @@
 <head>
 	<title>Jasmine Test Runner</title>
 	<link rel="stylesheet" type="text/css" href="lib/jasmine.css">
-	<script type="text/javascript" src="lib/jasmine.js"></script>
-	<script type="text/javascript" src="lib/jasmine-html.js"></script>
+	<script src="lib/jasmine.js"></script>
+	<script src="lib/jasmine-html.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-	<script type="text/javascript" src="lib/jasmine-jquery.js"></script>
-  <script type="text/javascript" src="lib/coffee-script.js"></script>
+	<script src="lib/jasmine-jquery.js"></script>
+  <script src="lib/coffee-script.js"></script>
 
 	<!-- include source files here... -->
-	<script type="text/javascript" src="../waypoints.js"></script>
+	<script src="../waypoints.js"></script>
+  <script src="../shortcuts/infinite-scroll/waypoints-infinite.js"></script>
 
 	<script type="text/javascript">
     (function() {
@@ -29,12 +30,27 @@
       var currentWindowOnload = window.onload;
 
       window.onload = function() {
+        var count = 0;
+        var loadCoffee = function(files) {
+          for (var i = 0, len = files.length; i < len; i++) {
+            count++;
+            CoffeeScript.load(files[i], function() {
+              count--;
+              if (!count) {
+                jasmine.getFixtures().fixturesPath = 'fixtures';
+                execJasmine();
+              }
+            });
+          }
+        };
+
         if (currentWindowOnload) {
           currentWindowOnload();
         }
-        CoffeeScript.load('spec.coffee', function() {
-          execJasmine();
-        });
+        loadCoffee([
+          'waypoints.coffee',
+          'infinite.coffee'
+        ]);
       };
 
       function execJasmine() {
