Sticky elements shortcut

--- a/test/index.html
+++ b/test/index.html
@@ -13,6 +13,7 @@
 	<!-- include source files here... -->
 	<script src="../waypoints.js"></script>
   <script src="../shortcuts/infinite-scroll/waypoints-infinite.js"></script>
+  <script src="../shortcuts/sticky-elements/waypoints-sticky.js"></script>
 
 	<script type="text/javascript">
     (function() {
@@ -49,7 +50,8 @@
         }
         loadCoffee([
           'waypoints.coffee',
-          'infinite.coffee'
+          'infinite.coffee',
+          'sticky.coffee'
         ]);
       };
 
