Style infinite scroll dl/dt/dd

--- a/shortcuts/infinite-scroll/index.html
+++ b/shortcuts/infinite-scroll/index.html
@@ -47,7 +47,7 @@
       padding:10px;
     }
 
-    p, pre, ul, .example {
+    p, pre, ul, .example, dl {
       margin-top:16px;
     }
 
@@ -75,6 +75,15 @@
       color:#fff;
       padding:16px 0;
       margin-top:16px;
+    }
+
+    dt {
+      font-weight:bold;
+      margin-top:6px;
+    }
+
+    dd {
+      margin-left:16px;
     }
 
     .infinite-container {
