--- a/index.html
+++ b/index.html
@@ -522,8 +522,8 @@ $('#thing').waypoint('alert', 'Foo: ');
       </div>
     </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-  <script src="waypoints.min.js"></script>
+  <script src="jquery.js"></script>
+  <script src="waypoints.js"></script>
   <script src="index.js"></script>
   </body>
 </html>
