my git history is beautiful

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                 <dt>allowed</dt>
                 <dd>'vertical', 'horizontal'</dd>
                 <dt>default</dt>
-                <dd>'vertical</dd>
+                <dd>'vertical'</dd>
               </dl>
             </li>
 
@@ -332,7 +332,7 @@ $('#thing-farther-down').waypoint('prev');
                 <dt>allowed</dt>
                 <dd>'vertical', 'horizontal'</dd>
                 <dt>default</dt>
-                <dd>'vertical</dd>
+                <dd>'vertical'</dd>
               </dl>
             </li>
 
@@ -522,8 +522,8 @@ $('#thing').waypoint('alert', 'Foo: ');
       </div>
     </div>
 
-  <script src="jquery.js"></script>
-  <script src="waypoints.js"></script>
-  <script src="index.js"></script>
+    <script src="jquery.js"></script>
+    <script src="waypoints.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
